[tool.poetry]
name = "comfyui-llm"
version = "0.1.0"
description = ""
authors = ["Dongnv"]
license = "CMC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.9.4"
requests = "^2.32.3"
openai = "^1.55.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
